# ti

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: im.h  log.hpp  orm.h  protocol.hpp  ti.hpp
include/client/: behavior.hpp  protocol.hpp  ti.hpp
include/server/: behavior.hpp  protocol.hpp  ti.hpp
module/client/: CMakeLists.txt
module/client/include/: client.h  ti_client.h
module/client/src/: client.cpp  ti_client.cpp
module/protocol/: CMakeLists.txt
module/protocol/include/: helper.h  socketcompat.h  ti.h  timecompat.h
module/protocol/src/: helper.cpp  socketcompat.cpp  ti.cpp  timecompat.cpp
module/server/: CMakeLists.txt
module/server/include/: server.h  ti_server.h
module/server/src/: server.cpp  ti_server.cpp
src/: main.cpp  orm.cpp  protocol.cpp
src/client/: behavior.cpp  main.cpp  protocol.cpp
src/server/: behavior.cpp  main.cpp  protocol.cpp  tiserver.cpp
src/test/: client.cc  diff.cc  networking.cc  orm.cc  password.cc  protocol.cc  serialization.cc  time.cc
